feat: add TechTalk flow and GPU WhisperX deployment